resolved other components popping up the date picker by adding z-index
1. while using the date picker, hovering over card components was causing cards popping up the data picker. I have added a z-index = 10 to the date picker component so that the cards don't pop up that. 
2. Due to absolute positioning the date picker and guest selector were separating out. I have fixed that problem also.

--- a/src/Search.css
+++ b/src/Search.css
@@ -3,6 +3,7 @@
     top: 35px;
     left: 25%;
     width: 100vw;
+    z-index: 100;
 }
 
 .search > h2 {
@@ -12,18 +13,13 @@
     width: 559px;
     padding: 10px;
     background-color: white;
-    position: absolute;
-    left: 0;
-    top: 380px;
+
 }
 
 .search > input {
     width: 539px;
     padding: 20px;
-    position: absolute;
-    left: 0;
     height: 30px;
-    top: 420px;
     border: none;
   }
   
@@ -32,9 +28,6 @@
 }
 
 .search > button {
-    position: absolute;
-    left: 0;
-    top: 480px;
     text-transform: inherit !important;
     background-color: #ff7779;
     color: white;
@@ -45,3 +38,4 @@
     background-color: white;
     color: #ff7779;
 }
+
